--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
 
 <footer class="footer text-center footer-landing">
   <div class="container-easy">
-    <p>Abonnez-vous à l'infolettre et courez la chance de gagner une visière CCM straight !</p>
+    <p><%= t('.abonnez_vous') %></p>
 
     <div class="email-footer row">
       <div class="col-sm-offset-3 col-sm-6">
