Modifier marketing paragraph

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -90,8 +90,8 @@
     <div class="content-section-a">
       <div class="row card-landing">
         <div class="col-xs-8">
-          <h2 class="featurette-heading">Bas prix. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Nous allons offrir les meilleurs prix sur le marché.</p>
+          <h2 class="featurette-heading">Bas prix.</h2>
+          <p class="lead">Vous ne trouverez pas de meilleur prix ailleurs.</p>
         </div>
 
         <div class="col-xs-4 padding-pastille">
@@ -104,7 +104,7 @@
 
       <div class="row card-landing">
         <div class="col-xs-8 col-xs-push-4">
-          <h2 class="featurette-heading">Tout sous un même toit. <span class="text-muted">See for yourself.</span></h2>
+          <h2 class="featurette-heading">Tout sous un même toit.</h2>
           <p class="lead">Peu importe ce que vous recherchez, on va l'avoir.</p>
         </div>
 
@@ -117,8 +117,8 @@
     <div class="content-section-a">
       <div class="row card-landing">
         <div class="col-xs-8">
-          <h2 class="featurette-heading">Achat en kit. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Vous allez pouvoir bénéficiez d'un rabais si vous achetez l'un de nos deux kit : Rookie ou Pro.</p>
+          <h2 class="featurette-heading">Achat en kit.</h2>
+          <p class="lead">Bénéficier d'un rabais en achetant l'un de nos deux kit : <em>Rookie</em> ou <em>Pro</em>.</p>
         </div>
 
         <div class="col-xs-4 padding-pastille">
