--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,25 +13,36 @@
         <div class="input-group-btn">
           <%= f.submit "Dis-moi", class:"btn-landing btn " %>
         </div>
-                        <%# if @home_page_user.nil? %>
-                      <%# else %>
-                       <%#= button_tag type: :submit, class: "btn btn-success" do %>
-                         <!-- <i class="fa fa-check" aria-hidden="true"></i> -->
-                       <%# end %>
-                      <%# end %>
-                       <%#= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class:"btn base-button" %>
+        <%# if @home_page_user.nil? %>
+        <%# else %>
+        <%#= button_tag type: :submit, class: "btn btn-success" do %>
+        <!-- <i class="fa fa-check" aria-hidden="true"></i> -->
+        <%# end %>
+        <%# end %>
+        <%#= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class:"btn base-button" %>
         <% end %> <!-- end of form_for -->
       </div>
     </div>
 
     <div class="social-media-footer-box">
       <ul class="list-inline">
-        <li><a href="https://www.facebook.com" class="fa fa-facebook"></a></li>
-        <li><a href="https://youtube.com" class="fa fa-youtube"></a></li>
-        <li><a href="https://twitter.com" class="fa fa-twitter"></a></li>
+        <li>
+          <%= link_to "https://www.facebook.com" do %>
+          <i class="fa fa-facebook"></i>
+          <% end %>
+        </li>
+        <li>
+        <%= link_to "https://www.youtube.com" do %>
+          <i class="fa fa-youtube"></i>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to "https://www.twitter.com" do %>
+          <i class="fa fa-twitter"></i>
+          <% end %>
+        </li>
       </ul>
     </div>
-
     <div class="padding-copyright container-easy">
       <span>&copy; Copyright 2017 - Zebrasclub.com, Inc.</span>
     </div>
