Changed the color of the hover. Will probably change it again but its good to push for now.

--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -23,7 +23,7 @@
         color: white;
         &:hover {
           text-decoration: none;
-          color: $base-button-color-hover;
+          color: #4CFFCF;
         }
       }
     }
