--- a/app/assets/stylesheets/components/_landing_page.scss
+++ b/app/assets/stylesheets/components/_landing_page.scss
@@ -122,11 +122,55 @@ header .header-content {
 }
 
 .animated {
-    visibility: visible;
-    animation-name: fadeInUp;
-    animation-duration: 1s;
-    animation-fill-mode: both;
+
+    animation: fadein 2.6s;
+    -moz-animation: fadein 2s; /* Firefox */
+    -webkit-animation: fadein 2s; /* Safari and Chrome */
+    -o-animation: fadein 2s; /* Opera */
 }
+
+
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+// .animated {
+//     visibility: visible;
+//     animation-name: fadeInUp;
+//     -webkit-animation-duration: 5s;
+//     animation-duration: 5s;
+//     -webkit-animation-fill-mode: both;
+//     animation-fill-mode: both;
+// }
 
 @media (min-width: 992px) {
   .input-group-btn {
