--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -85,7 +85,7 @@
           </div>
         </div> <!-- second col-xs-12 col-sm-6 -->
 
-      </div> <!-- row -->
+      </div> <!-- principal row -->
     </div> <!-- container header -->
   </header>
 
