Forgotted a margin for under 992px window. Wont open a new branch for that.

--- a/app/assets/stylesheets/components/_landing_page.scss
+++ b/app/assets/stylesheets/components/_landing_page.scss
@@ -217,6 +217,7 @@ header .header-content {
 @media (max-width: 992px) {
     .btn-landing-will-be-removed {
       width: 100%;
+      margin-left: 0px;
   }
 }
 // ----------------------------------------------
