--- a/app/assets/stylesheets/components/_landing_page.scss
+++ b/app/assets/stylesheets/components/_landing_page.scss
@@ -121,14 +121,15 @@ header .header-content {
   }
 }
 
+// <-- Animations -->
+
 .animated {
 
-    animation: fadein 2.6s;
+    animation: fadein 2s;
     -moz-animation: fadein 2s; /* Firefox */
     -webkit-animation: fadein 2s; /* Safari and Chrome */
     -o-animation: fadein 2s; /* Opera */
 }
-
 
 @keyframes fadein {
     from {
@@ -163,22 +164,45 @@ header .header-content {
     }
 }
 
-// .animated {
-//     visibility: visible;
-//     animation-name: fadeInUp;
-//     -webkit-animation-duration: 5s;
-//     animation-duration: 5s;
-//     -webkit-animation-fill-mode: both;
-//     animation-fill-mode: both;
-// }
+.animation-right-t-left {
+  animation: slideIn 1.5s forwards;
+  -webkit-animation: slideIn 1.5s forwards;
+  -moz-animation: slideIn 1.5s forwards;
+  -o-animation: slideIn 1.5s forwards; /* Opera */
+
+}
+
+@-webkit-keyframes slideIn {
+  0% {
+    transform: translateX(400px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@-moz-keyframes slideIn {
+  0% {
+    transform: translateX(400px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@keyframes slideIn {
+  0% {
+    transform: translateX(400px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+// <-- End of Animations -->
 
 @media (min-width: 992px) {
   .input-group-btn {
     padding-left: 10px !important;
   }
 }
-
-
 
 
 @media (max-width: 992px) {
