--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -46,7 +46,7 @@
       <div class="row">
 
         <div class="col-xs-12 col-sm-6">
-          <div class="header-content">
+          <div class="header-content animated">
             <div class="header-content-inner">
               <h1><%= t('.header_content') %></h1>
               <p class="lead"><%= t('.lead') %></p>
@@ -55,7 +55,7 @@
                   <strong><%= t('.span_strong') %></strong>
                 </span>
               </p>
-              <div class="subscribe animated" >
+              <div class="subscribe" >
                 <div class="row">
                   <div class="col-md-12">
                     <% if @home_page_user.errors.any? %>
@@ -80,7 +80,7 @@
         <div class="col-xs-12 col-sm-6">
           <div class="device-container">
             <div class="device-container-inner">
-              <%= image_tag "device_zebrasclub_page_lancement.png", class:"img-responsive center-block" %>
+              <%= image_tag "device_zebrasclub_page_lancement.png", class:"img-responsive center-block animation-right-t-left" %>
             </div>
           </div>
         </div> <!-- second col-xs-12 col-sm-6 -->
