--- a/app/views/pages/new_user.js.erb
+++ b/app/views/pages/new_user.js.erb
@@ -1,6 +1,6 @@
 
 
-$(".subscribe").text("Tu as été ajouté!");
+$(".subscribe").html("<strong>GOOD CALL REF !</strong> Tu as été ajouté à notre liste.");
 // $(".btn-landing").addClass('btn-landing-js');
 // $(".btn-landing").removeClass();
 // $(".input-group-btn > .btn-landing").removeClass().addClass("btn btn-landing-js");
