--- a/app/assets/stylesheets/components/_landing_page.scss
+++ b/app/assets/stylesheets/components/_landing_page.scss
@@ -118,9 +118,28 @@ header .header-content {
     border: none;
     border-bottom: solid 1px #fff;
     color: white;
+
   }
 }
 
+  #user_email::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+      color:    #586E75 ;
+      font-weight: lighter;
+    }
+    // :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    //    color:    #909;
+    //    opacity:  1;
+    // }
+    // ::-moz-placeholder { /* Mozilla Firefox 19+ */
+    //    color:    #909;
+    //    opacity:  1;
+    // }
+    // :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    //    color:    #909;
+    // }
+    // ::-ms-input-placeholder { /* Microsoft Edge */
+    //    color:    #909;
+    // }
 // <-- Animations -->
 
 .animated {
