--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
   <%#= render 'shared/navbar' %>
   <%= render 'shared/flashes' %>
   <%= yield %>
-  <%= render 'shared/footer' %>
+  <%#= render 'shared/footer' %>
   <%= javascript_include_tag 'application' %>
   <%= yield(:after_js) %>
 </body>
