Changed the color of the forms placeholder when it focus and the box-shadow.

--- a/app/assets/stylesheets/components/_landing_page.scss
+++ b/app/assets/stylesheets/components/_landing_page.scss
@@ -121,9 +121,16 @@ header .header-content {
 
   }
 }
+.form-control:focus {
+     box-shadow: none !important;
+     border-color: white !important;
+}
+.input-group-btn:focus {
+    outline: none  !important;
+}
 
   #user_email::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-      color:    #586E75 ;
+      color:    #323332 ;
       font-weight: lighter;
     }
     // :-moz-placeholder { /* Mozilla Firefox 4 to 18 */
