--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,5 +64,6 @@
   <%= render 'shared/footer' %>
   <%= javascript_include_tag 'application' %>
   <%= yield(:after_js) %>
+  <%= render 'shared/js_locales_info' %>
 </body>
 </html>
