Changed the twitter metadata

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="<%= DEFAULT_META["twitter_account"] %>">
   <meta name="twitter:title" content="<%= I18n.locale == :fr ? meta_title : "Zebrasclub.com - The worlds number one hockey referee store" %>">
-  <meta name="twitter:description" content="<%= I18n.locale == :fr ? meta_description : "Get a hockey referee package at the lowest price!" %>">
+  <meta name="twitter:description" content="<%= I18n.locale == :fr ? meta_description : "Online store: pants, shirts, whistles, helmets, shin tights, armbands, ..." %>">
   <meta name="twitter:creator" content="<%= DEFAULT_META["twitter_account"] %>">
   <meta name="twitter:image:src" content="<%= meta_image %>">
 
