Checked and you can create new items in the admin interface with the picture url of cloudinary.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
+<!-- TO DISPLAY A CLOUDINARY IMAGE USE THIS HELPER -->
+<%#= cl_image_tag("ccm-hockey-referee-jersey-pro-150-ab-sr_tun3wa.jpg", height: 500, crop: "scale") %>
 
-
-<!--
-<div class="banner">
+<!-- <div class="banner">
   <div class="banner-content">
     <div class="home-banner">
       <div class="container">
