Add right links to the social media in the footer, facebook and instagram

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -27,18 +27,13 @@
     <div class="social-media-footer-box">
       <ul class="list-inline">
         <li>
-          <%= link_to "https://www.facebook.com" do %>
+          <%= link_to "https://www.facebook.com/Zebrasclubcom-1909241399312473/" do %>
           <i class="fa fa-facebook"></i>
           <% end %>
         </li>
         <li>
-        <%= link_to "https://www.youtube.com" do %>
-          <i class="fa fa-youtube"></i>
-          <% end %>
-        </li>
-        <li>
-          <%= link_to "https://www.twitter.com" do %>
-          <i class="fa fa-twitter"></i>
+        <%= link_to "https://www.instagram.com/zebrasclub/" do %>
+          <i class="fa fa-instagram"></i>
           <% end %>
         </li>
       </ul>
