--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,10 +59,10 @@
   <%= favicon_link_tag %>
 </head>
 <body>
-  <%#= render 'shared/navbar' %>
+  <%= render 'shared/navbar' %>
   <%= render 'shared/flashes' %>
   <%= yield %>
-  <%= render 'shared/footer' %>
+  <%#= render 'shared/footer' %>
   <%= javascript_include_tag 'application' %>
   <%= yield(:after_js) %>
   <%= render 'shared/js_locales_info' %>
