--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -28,6 +28,7 @@
    <% else %>
    <%= link_to "Login", new_user_session_path, class: "btn navbar-button navbar-wagon-item" %>
    <%= link_to "Sign Up", new_user_registration_path, class: "btn navbar-button navbar-wagon-item" %>
+   <%= link_to "Individual Items", items_path, class:"btn navbar-button" %>
    <% end %>
  </div>
  <div class="navbar-wagon-item hidden-md hidden-lg">
