Made available the individual items page. Messed around with the session_store. I have some code commented that permit you to store more then 4Kb cookie. But i wont use it for now. Added the link_to items_path. Added some card class for the items to look better.

--- a/app/views/items/_package_index_item.html.erb
+++ b/app/views/items/_package_index_item.html.erb
@@ -8,7 +8,7 @@
       <h2><%= brand %></h2>
     </div>
     <div class="package-index-item-price">
-      <%= humanized_money_with_symbol(price) %>
+      <%= humanized_money_with_symbol(:price_cents) %>
     </div>
     <div class="package-index-item-description">
       <p><%= description %></p>
