--- a/app/views/items/_package_index_item_form.html.erb
+++ b/app/views/items/_package_index_item_form.html.erb
@@ -19,7 +19,7 @@
         <% item_attr = {
           old_item_id: @item,
           new_item_id: i.id, # I.E., THIS ITEM!!!
-          item_type: Category.find(i.category_id).item_type,
+          # item_type: Category.find(i.category_id).item_type,
           picture: i.picture,
           brand: i.brand,
           price: i.price,
