Added bootstrap variables for the in-cart buttons background-color.

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -61,7 +61,7 @@
 
 .in-cart {
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-  background-color: #00DAB8;
+  background-color: $in-cart-btn;
   color: #bef5ea;
 }
 
