--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -72,7 +72,7 @@
 
 .package-item-in-cart {
   color: white;
-  background-color: #00DAB8;
+  background-color: $in-cart-btn;
 }
 
 .package-items {
