--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -27,13 +27,15 @@ $border-radius-small: 2px;
 //Base Button colors
 $base-button-color: #64D6FF;
 $base-button-color-hover: #48C3F0;
-$cart-button: #57C1AD;
+$cart-button: #338182;
 $cart-button-hover: #48D2AD;
 
 $add-to-cart-button: #28A4D3;
 $add-to-cart-hover-button: #156F8B;
 $add-to-cart-disable: #93D1E8;
 $size-base-grey: #B7B7B7;
+
+$in-cart-btn: #338182;
 
 
 // Form
