messing around with json a little bit

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,6 +20,7 @@
             <%= f.submit "GET YOUR PACKAGE", class: "btn cart-button btn-package" %>
             <% end %>
           </div>
+          <%= link_to "Packages", package_path %>
         </div>
       </div>
     </div>
